Set height using variable and fixed header with z-index of 10

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -1,18 +1,16 @@
 @import url('https://fonts.googleapis.com/css2?family=Crimson+Text&display=swap');
 
-:root {
-    --header-color: #c62828 ;
-}
-
 header {
     width: 100%;
+    height: var(--header-height);
+    padding: 0px 70px;
     display: flex;
     align-items: center; justify-content: space-between;
     background-color: var(--header-color);
     box-shadow: 0 2px 12px rgb(0, 0, 0, 0.5);
     font-size: 50px; font-weight: bolder;
-    padding: 0.5rem 8%;
     color: white;
     font-family: 'Crimson Text', serif;
-    position: relative;
+    position: fixed;
+    z-index: 10;
 }
